added new files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neeru Samatolana</title>
+    <title>Neeru Samatolana - Login & Signup</title>
     <style>
         * {
             margin: 0;
@@ -17,7 +17,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-image: url('./Picture1.jpg');
+            background-image: url(./Picture1.jpg);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -27,7 +27,7 @@
 
         body::before {
             content: '';
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             right: 0;
@@ -36,18 +36,17 @@
             z-index: 1;
         }
 
-        .main-heading {
+        .heading {
             color: white;
             font-size: 2.5rem;
-            margin-bottom: 30px;
-            text-align: center;
+            margin-bottom: 2rem;
             position: relative;
             z-index: 2;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            text-align: center;
             font-weight: bold;
-            letter-spacing: 1px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             padding: 20px;
-            border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+            border-bottom: 3px solid #4a90e2;
         }
 
         .container {
@@ -72,16 +71,13 @@
             text-align: center;
             background: rgba(248, 249, 250, 0.9);
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: background 0.3s;
         }
 
         .tab.active {
             background: white;
             font-weight: bold;
-        }
-
-        .tab:hover {
-            background: rgba(255, 255, 255, 1);
+            color: #4a90e2;
         }
 
         .form-container {
@@ -132,7 +128,7 @@
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.3s;
             font-weight: 500;
         }
 
@@ -160,19 +156,20 @@
         }
 
         @media (max-width: 480px) {
-            .main-heading {
+            .heading {
                 font-size: 2rem;
-                margin-bottom: 20px;
+                padding: 15px;
             }
-            
             .container {
                 margin: 10px;
             }
         }
     </style>
+    <script src="script.js" defer>
+    </script>
 </head>
 <body>
-    <h1 class="main-heading">Neeru Samatolana</h1>
+    <h1 class="heading">Neeru Samatolana</h1>
     <div class="container">
         <div class="tab-container">
             <div class="tab active" onclick="switchTab('login')">Login</div>
